--- a/GenericHID/generichid/GenericHID.vcproj
+++ b/GenericHID/generichid/GenericHID.vcproj
@@ -426,6 +426,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\timercounter.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\timereditorfactory.cpp"
 				>
 			</File>
@@ -1306,6 +1310,10 @@
 						Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\timercounter.h"
+				>
 			</File>
 			<File
 				RelativePath=".\timereditorfactory.h"
