--- a/GenericHID/generichid/GenericHID.vcproj
+++ b/GenericHID/generichid/GenericHID.vcproj
@@ -480,6 +480,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\include\deviceconfig.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dragtoolbutton.h"
 				>
 				<FileConfiguration
