--- a/usbhid.vcproj
+++ b/usbhid.vcproj
@@ -161,6 +161,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\hidlcddevice.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\hidparser.cpp"
 				>
 			</File>
@@ -188,6 +192,10 @@
 			</File>
 			<File
 				RelativePath=".\hiddevicethread.h"
+				>
+			</File>
+			<File
+				RelativePath=".\hidlcddevice.h"
 				>
 			</File>
 			<File
